feat(Users): create apis for users
