# app/openapi.yml
@@ -19,12 +19,74 @@ paths:
         200:
           description: Logged in successfully
 
-  /auth/register:
+  /api/auth/user:
+    get:
+      tags:
+        - User
+      summary: Get User Details
+      parameters:
+        - name: uuid
+          in: query          # GET requests should use query or path params, not body
+          type: string
+      responses:
+        200:
+          description: User details retrieved successfully
+
     post:
       tags:
-        - Authentication
-      summary: User Registration
+        - User
+      summary: Create User
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+              password:
+                type: string
+              email:
+                type: string
+              role:
+                type: integer
       responses:
         201:
-          description: Registered successfully
-  
+          description: User created successfully
+
+    put:
+      tags:
+        - User
+      summary: Update User
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+              password:
+                type: string
+              email:
+                type: string
+              role:
+                type: integer
+      responses:
+        200:
+          description: User updated successfully
+
+    delete:
+      tags:
+        - User
+      summary: Delete User
+      parameters:
+        - name: uuid
+          in: query          # Or pass in path /api/auth/user/{uuid}
+          required: true
+          type: string
+      responses:
+        200:
+          description: User deleted successfully
